--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,31 +4,83 @@
     "addNewProduct": "Add New Product",
     "productNumber": "Product number",
     "productName": "Product name",
-    "productImage" : "Product image",
-    "delete" : "Delete",
-    "editItem" : "Edit Item",
-    "active" : "Active",
-    "edit" : "Edit",
-    "customerNumber" : "Customer number",
-    "clientId" : "Client Id",
-    "name" : "Name",
-    "email" : "Email",
-    "search" : "Search",
-    "addNewCustomer" : "Add New Customer",
-    "password" : "Password",
-    "passwordConfirmation" : "Password confirmation",
-    "phone" : "Phone",
-    "address" : "Address",
-    "postalCode" : "Postal Code",
-    "city" : "City",
-    "companyName" : "Company name",
-    "location" : "Location",
-    "deliveryAvailableOn" : "Delivery Available On",
-    "monday" : "Monday",
-    "tuesday" : "Tuesday",
-    "wednesday" : "Wednesday",
-    "thursday" : "Thursday",
-    "friday" : "Friday",
-    "saturday" : "Saturday",
-    "sunday" : "Sunday"
+    "productImage": "Product image",
+    "delete": "Delete",
+    "editItem": "Edit Item",
+    "active": "Active",
+    "edit": "Edit",
+    "customerNumber": "Customer number",
+    "clientId": "Client Id",
+    "name": "Name",
+    "email": "Email",
+    "search": "Search",
+    "addNewCustomer": "Add New Customer",
+    "password": "Password",
+    "passwordConfirmation": "Password confirmation",
+    "phone": "Phone",
+    "address": "Address",
+    "postalCode": "Postal Code",
+    "city": "City",
+    "companyName": "Company name",
+    "location": "Location",
+    "deliveryAvailableOn": "Delivery Available On",
+    "monday": "Monday",
+    "tuesday": "Tuesday",
+    "wednesday": "Wednesday",
+    "thursday": "Thursday",
+    "friday": "Friday",
+    "saturday": "Saturday",
+    "sunday": "Sunday",
+    "login": "Login",
+    "toLoginIntoAcc": "To log into your account, please enter your client ID and password",
+    "clientPassword": "Client Password",
+    "generatePassword": "Generate password",
+    "youDont": "You do not have a password, please enter your client ID and click send",
+    "send": "Send",
+    "home": "Home",
+    "deleteItem": "Delete Item",
+    "importCustomerFromExcel": "Import customers from Excel",
+    "myInfo": "My Information",
+    "placeOrder": "Place an order",
+    "accountInfo": "Account Information",
+    "accountReprs": "Account Representative",
+    "confirmOrder": "Confirm Order",
+    "confirmAnOrder": "Confirm an order",
+    "remove": "Remove",
+    "quantity": "Quantity",
+    "choseDate": "Choose date you want to receive your order. If a date is not available in calendar it is because we can't deliver at this day",
+    "yourOrder": "Your order has been sent!",
+    "confirmation": "You will receive a confirmation with the number and details of your order by email.",
+    "thankYou": "Thank you!",
+    "newOrder": "New order",
+    "pleaseEnterValidClientId": "Please enter a valid client Id.",
+    "pleaseEnterValidPassword": "Please enter a password.",
+    "logOut": "Log out",
+    "go": "Go",
+    "product": "Product",
+    "pleaseEnterTheProductName": "Please enter the product name.",
+    "pleaseEnterImageURl": "Please enter image url.",
+    "imageURL": "Image URL",
+    "description": "Description",
+    "pleaseEnterDescription": "Please enter description",
+    "save": "Save",
+    "importCustFromExcel": "Import customer from excel",
+    "customer": "Customer",
+    "pleaseEnterClientID": "Please enter a valid client Id.",
+    "pleaseEnterName": "Please enter name",
+    "pleaseEnterEmail": "Please enter email",
+    "pleaseEnterPassword": "Please enter password",
+    "pleaseEnterConfirmPassword": "Please enter confirm password",
+    "pleaseEnterPhone": "Please enter phone number",
+    "pleaseEnterAddress": "Please enter address",
+    "pleaseEnterPostalCode": "Please enter postal code",
+    "pleaseEnterCity": "Please enter city",
+    "pleaseEnterCompanyName": "Please enter company name",
+    "pleaseEnterLocation": "Please enter location",
+    "role": "Role",
+    "client": "Client",
+    "admin": "Admin",
+    "addToCart": "Add to Cart",
+    "orderConfirmation": "Order confirmation"
+
 }
