--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -4,31 +4,83 @@
     "addNewProduct": "Ajouter un produit",
     "productNumber": "Nom de produit",
     "productName": "Nom de produit",
-    "productImage" : "Image du produit",
-    "delete" : "Supprimer",
-    "editItem" : "Editer",
-    "active" : "Actif",
-    "edit" : "Modifier",
-    "customerNumber" : "Numéro de client",
-    "clientId" : "Identifiant de client",
-    "name" : "Nom",
-    "email" : "Courriel",
-    "search" : "Rechercher",
-    "addNewCustomer" : "Ajouter un nouveau client",
-    "password" : "Mot de passe",
-    "passwordConfirmation" : "Confirmation du mot de passe",
-    "phone" : "Téléphone",
-    "address" : "Adresse",
-    "postalCode" : "Code postale",
-    "city" : "Ville",
-    "companyName" : "Nom de la compagnie",
-    "location" : "Localisation",
-    "deliveryAvailableOn" : "Livraison disponible le",
-    "monday" : "Lundi",
-    "tuesday" : "Mardi",
-    "wednesday" : "Mercredi",
-    "thursday" : "Jeudi",
-    "friday" : "Vendredi",
-    "saturday" : "Samedi",
-    "sunday" : "Dimanche"
+    "productImage": "Image du produit",
+    "delete": "Supprimer",
+    "editItem": "Editer",
+    "active": "Actif",
+    "edit": "Modifier",
+    "customerNumber": "Numéro de client",
+    "clientId": "Identifiant de client",
+    "name": "Nom",
+    "email": "Courriel",
+    "search": "Rechercher",
+    "addNewCustomer": "Ajouter un nouveau client",
+    "password": "Mot de passe",
+    "passwordConfirmation": "Confirmation du mot de passe",
+    "phone": "Téléphone",
+    "address": "Adresse",
+    "postalCode": "Code postale",
+    "city": "Ville",
+    "companyName": "Nom de la compagnie",
+    "location": "Localisation",
+    "deliveryAvailableOn": "Livraison disponible le",
+    "monday": "Lundi",
+    "tuesday": "Mardi",
+    "wednesday": "Mercredi",
+    "thursday": "Jeudi",
+    "friday": "Vendredi",
+    "saturday": "Samedi",
+    "sunday": "Dimanche",
+    "login": "Connexion",
+    "toLoginIntoAcc": "Pour vous connecter à votre compte, veuillez saisir votre identifiant client et votre mot de passe",
+    "clientPassword": "Mot de passe",
+    "generatePassword": "Créer un mot de passe",
+    "youDont": "Vous n'avez pas de mot de passe, veuillez entrer votre identifiant client et cliquer sur envoyer",
+    "send": "Envoyer",
+    "home": "Accueil",
+    "deleteItem": "Supprimer",
+    "importCustomerFromExcel": "Importer depuis Excel",
+    "myInfo": "Mes informations",
+    "placeOrder": "Faire une commande",
+    "accountInfo": "Information du compte",
+    "accountReprs": "Votre représentant",
+    "confirmOrder": "Confirmer la commande",
+    "confirmAnOrder": "Confirmation de la commande",
+    "remove": "Retirer",
+    "quantity": "Quantité",
+    "choseDate": "Choisissez la date à laquelle vous souhaitez recevoir votre commande. Si une date n'est pas disponible dans le calendrier c'est que nous ne pouvons pas livrer à ce jour",
+    "yourOrder": "Vous recevrez une confirmation avec le numéro et les détails de votre commande par email.",
+    "confirmation": "Vous recevrez une confirmation avec le numéro et les détails de votre commande par email",
+    "thankYou": "merci",
+    "newOrder": "Nouvelle commande",
+    "pleaseEnterValidClientId": "Veuillez saisir un identifiant client valide.",
+    "pleaseEnterValidPassword": "Veuillez entrer un mot de passe.",
+    "logOut": "Se déconnecter",
+    "go": "Aller",
+    "product": "Produit",
+    "pleaseEnterTheProductName": "Veuillez saisir le nom du produit",
+    "pleaseEnterImageURl": "Veuillez saisir l'URL de l'image",
+    "imageURL": "URL de l'image",
+    "description": "La description",
+    "pleaseEnterDescription": "Veuillez entrer la description",
+    "save": "Sauvegarder",
+    "importCustFromExcel": "Importer un client depuis Excel",
+    "customer": "Cliente",
+    "pleaseEnterClientID": "Veuillez saisir un identifiant client valide",
+    "pleaseEnterName": "Veuillez entrer le nom",
+    "pleaseEnterEmail": "Veuillez saisir un e-mail",
+    "pleaseEnterPassword": "Veuillez entrer le mot de passe",
+    "pleaseEnterConfirmPassword": "Veuillez saisir le mot de passe de confirmation",
+    "pleaseEnterPhone": "Veuillez entrer le numéro de téléphone",
+    "pleaseEnterAddress": "Veuillez entrer l'adresse",
+    "pleaseEnterPostalCode": "Please enter postal code",
+    "pleaseEnterCity": "Veuillez entrer le code postal",
+    "pleaseEnterCompanyName": "Veuillez saisir le nom de l'entreprise",
+    "pleaseEnterLocation": "Veuillez saisir le lieu",
+    "role": "Rôle",
+    "client": "Cliente",
+    "admin": "administrateur",
+    "addToCart": "Ajouter au panier",
+    "orderConfirmation": "Confirmation de commande"
+
 }
