--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -38,7 +38,7 @@
     "youDont": "You do not have a password, please enter your client ID and click send",
     "send": "Send",
     "home": "Home",
-    "deleteItem": "Delete Item",
+    "deleteItem": "Delete",
     "importCustomerFromExcel": "Import customers from Excel",
     "myInfo": "My Information",
     "placeOrder": "Place an order",
