--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,7 +6,7 @@
     "productName": "Product name",
     "productImage": "Product image",
     "delete": "Delete",
-    "editItem": "Edit Item",
+    "editItem": "Edit",
     "active": "Active",
     "edit": "Edit",
     "customerNumber": "Customer number",
