--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -11,7 +11,7 @@
     "edit": "Modifier",
     "customerNumber": "Numéro de client",
     "clientId": "Identifiant de client",
-    "name": "Cie Nom",
+    "name": "Cie",
     "email": "Courriel",
     "search": "Rechercher",
     "addNewCustomer": "Ajouter un nouveau client",
