--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -2,7 +2,7 @@
     "manageProducts": "Gestion des produits",
     "manageCustomers": "Gestion des clients",
     "addNewProduct": "Ajouter un produit",
-    "productNumber": "Nom de produit",
+    "productNumber": "Numéro de produit",
     "productName": "Nom de produit",
     "productImage": "Image du produit",
     "delete": "Supprimer",
